bk_ida/gccida/c0/replace_oldest_value_mem
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/replace_oldest_value_mem/src/regrename.c:1980:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/replace_oldest_value_mem/src/regrename.c:1980:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), 
                 ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/replace_oldest_value_mem/src/obj/regrename.o] Error 1
